apps/robot-shop/manifests/cart-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    service: cart
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cart
  template:
    metadata:
      labels:
        service: cart
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: cart
        image: robotshop/rs-cart:latest
        # agent networking access 
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
