apps/robot-shop/manifests/mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    service: mongodb
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongodb
  template:
    metadata:
      labels:
        service: mongodb
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: mongodb
        image: robotshop/rs-mongodb:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongodb-volume
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          privileged: true
      restartPolicy: Always
      volumes:
      - name: mongodb-volume
        persistentVolumeClaim:
          claimName: mongodb-volume-claim
