apps/robot-shop/manifests/payment-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    service: payment
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: payment
  template:
    metadata:
      labels:
        service: payment
    spec:
      containers:
      - name: payment
        image: docker.io/pranavgaikwad/robot-shop-payment:latest
        # agent networking access
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
