apps/robot-shop/manifests/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  labels:
    service: ratings
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ratings
  template:
    metadata:
      labels:
        service: ratings
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: ratings
        image: robotshop/rs-ratings:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        securityContext:
          privileged: true
      restartPolicy: Always
