apps/robot-shop/manifests/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
      - name: redis
        image: redis:4.0.6
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        volumeMounts:
        - mountPath: "/data"
          name: redis-volume
      restartPolicy: Always
      volumes:
      - name: redis-volume
        persistentVolumeClaim:
          claimName: redis-volume-claim
