apps/robot-shop/manifests/shipping-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    service: shipping
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: shipping
  template:
    metadata:
      labels:
        service: shipping
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: shipping
        image: robotshop/rs-shipping:latest
        ports:
        - containerPort: 8080
        # it's Java it needs lots of memory
        resources:
          limits:
            cpu: 200m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 500Mi
      restartPolicy: Always
