apps/robot-shop/manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    service: web
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web
  template:
    metadata:
      labels:
        service: web
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: web
        image: robotshop/rs-web:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        securityContext:
          privileged: true
      restartPolicy: Always
