apps/robot-shop/manifests/cart-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: robot-shop
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: cart
