apps/robot-shop/manifests/catalogue-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: catalogue
  name: catalogue
  namespace: robot-shop
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: catalogue
