apps/robot-shop/manifests/dispatch-service.yaml
# dispatch just listens to a message queue
# it does not expose any ports
apiVersion: v1
kind: Service
metadata:
  name: dispatch
  labels:
    service: dispatch
  namespace: robot-shop
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    service: dispatch
