apps/robot-shop/manifests/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mysql
  name: mysql
  namespace: robot-shop
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    service: mysql
