apps/robot-shop/manifests/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    service: payment
  namespace: robot-shop
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: payment
