apps/robot-shop/manifests/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis
  namespace: robot-shop
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    service: redis
