apps/robot-shop/manifests/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    service: shipping
  namespace: robot-shop
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: shipping
