apps/robot-shop/manifests/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    service: user
  namespace: robot-shop
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: user
