apps/robot-shop/manifests/web-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: front-end
  namespace: robot-shop
spec:
  path: "/"
  port:
    targetPort: http
  to:
    kind: Service
    name: web
